--- a/game/html/src/main/webapp/RpgClient.html
+++ b/game/html/src/main/webapp/RpgClient.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>RpgClient</title>
-  </head>
-  <body bgcolor="black">
-    <script src="game/game.nocache.js"></script>
-  </body>
+<head>
+<title>RpgClient</title>
+</head>
+<body bgcolor="black">
+	<script src="game/game.nocache.js"></script>
+	<div id="playn-root" style="width: 800px; height: 600px"></div>
+</body>
 </html>
